# ME433git

./: CMakeLists.txt  CMakeListswrong.txt
HW11/: CMakeLists.txt  whiteline.py
HW12/: pwm.c
HW13/: CMakeLists.txt  imu.c  mouse.c
HW13 imu only/: imu.c
HW14/: bcoeffs.csv  dcoeffs.csv  python_csv.py
HW16/: CMakeLists.txt  control.c
HW2/: CMakeLists.txt
HW2/blink/: CMakeLists.txt
HW3/: CMakeLists.txt
HW3/print/: CMakeLists.txt  print.c
HW4/: CMakeLists.txt
HW4/spi/: CMakeLists.txt  bme280_spi.c
HW5/: CMakeLists.txt
HW5/bmp280_i2c/: bmp280_i2c.c
HW6/: CMakeLists.txt  main.c
HW6/bmp280_i2c/: CMakeLists.txt
HW7/: CMakeLists.txt  font.h  ssd1306.c  ssd1306.h  uart_advanced.c
HW9/: CMakeLists.txt  uart_advanced.c
